browser/themes/shared/tabbrowser/tabs.css
/* ... */
.
tab
-
group
-
label
{
-
moz
-
window
-
dragging
:
no
-
drag
;
text
-
align
:
center
;
font
-
weight
:
var
(
-
-
font
-
weight
-
bold
)
;
text
-
overflow
:
ellipsis
;
white
-
space
:
nowrap
;
overflow
:
hidden
;
text
-
shadow
:
none
;
border
-
radius
:
var
(
-
-
tab
-
border
-
radius
)
;
line
-
height
:
calc
(
var
(
-
-
tab
-
group
-
label
-
height
)
-
var
(
-
-
tab
-
group
-
line
-
thickness
)
)
;
min
-
height
:
var
(
-
-
tab
-
group
-
label
-
height
)
;
min
-
width
:
var
(
-
-
tab
-
group
-
label
-
height
)
;
max
-
width
:
10em
;
padding
-
inline
:
var
(
-
-
tab
-
group
-
label
-
padding
)
;
color
:
light
-
dark
(
var
(
-
-
tab
-
group
-
color
-
pale
)
var
(
-
-
tab
-
group
-
label
-
text
-
dark
)
)
;
background
-
color
:
light
-
dark
(
var
(
-
-
tab
-
group
-
color
)
var
(
-
-
tab
-
group
-
color
-
invert
)
)
;
margin
:
auto
0
;
tab
-
group
[
collapsed
]
>
.
tab
-
group
-
label
-
container
>
&
{
background
-
color
:
light
-
dark
(
var
(
-
-
tab
-
group
-
color
-
pale
)
var
(
-
-
tab
-
group
-
color
)
)
;
color
:
light
-
dark
(
var
(
-
-
tab
-
group
-
color
)
var
(
-
-
tab
-
group
-
color
-
pale
)
)
;
outline
:
1px
solid
light
-
dark
(
var
(
-
-
tab
-
group
-
color
)
var
(
-
-
tab
-
group
-
color
-
pale
)
)
;
outline
-
offset
:
-
1px
;
}
#
tabbrowser
-
tabs
[
orient
=
"
vertical
"
]
:
not
(
[
expanded
]
)
&
{
width
:
24px
;
min
-
height
:
24px
;
max
-
width
:
24px
;
/
*
*
Keep
tab
group
label
square
in
collapsed
sidebar
centered
without
*
margin
:
auto
similar
to
how
tabs
'
.
tab
-
background
use
margin
in
order
*
to
stay
centered
in
the
collapsed
sidebar
.
This
helps
prevent
the
tab
*
group
label
from
jumping
around
during
the
sidebar
collapsed
-
to
-
expanded
*
transition
.
*
/
margin
-
inline
:
calc
(
var
(
-
-
tab
-
inner
-
inline
-
margin
)
+
(
var
(
-
-
tab
-
collapsed
-
background
-
width
)
-
24px
)
/
2
)
;
font
-
size
:
0
;
&
:
:
first
-
letter
{
font
:
message
-
box
;
font
-
weight
:
var
(
-
-
font
-
weight
-
bold
)
;
line
-
height
:
24px
;
}
}
#
tabbrowser
-
tabs
[
orient
=
"
vertical
"
]
[
expanded
]
&
{
align
-
self
:
start
;
box
-
sizing
:
content
-
box
;
line
-
height
:
var
(
-
-
tab
-
group
-
label
-
height
)
;
max
-
width
:
-
moz
-
available
;
margin
-
inline
-
end
:
var
(
-
-
space
-
medium
)
;
padding
-
block
:
calc
(
(
24px
-
var
(
-
-
tab
-
group
-
label
-
height
)
)
/
2
)
;
}
#
tabbrowser
-
tabs
[
tablist
-
has
-
focus
]
&
.
tablist
-
keyboard
-
focus
{
outline
:
var
(
-
-
focus
-
outline
)
;
outline
-
offset
:
var
(
-
-
focus
-
outline
-
offset
)
;
}
}
.
tab
-
group
-
editor
-
panel
{
-
-
panel
-
width
:
22em
;
-
-
panel
-
padding
:
var
(
-
-
space
-
large
)
;
-
-
panel
-
separator
-
margin
:
var
(
-
-
panel
-
separator
-
margin
-
vertical
)
0
;
font
:
menu
;
.
panel
-
header
{
min
-
height
:
auto
;
>
h1
{
margin
-
top
:
0
;
}
}
toolbarseparator
{
margin
-
block
:
var
(
-
-
space
-
medium
)
;
}
.
panel
-
body
{
padding
-
block
:
var
(
-
-
space
-
medium
)
;
}
&
.
tab
-
group
-
editor
-
mode
-
create
.
tab
-
group
-
edit
-
mode
-
only
&
:
not
(
.
tab
-
group
-
editor
-
mode
-
create
)
.
tab
-
group
-
create
-
mode
-
only
{
display
:
none
;
}
.
tab
-
group
-
editor
-
name
{
display
:
flex
;
flex
-
direction
:
column
;
>
label
{
margin
-
inline
:
0
;
margin
-
bottom
:
var
(
-
-
space
-
small
)
;
}
>
input
[
type
=
"
text
"
]
{
padding
:
var
(
-
-
space
-
medium
)
;
}
}
.
tab
-
group
-
editor
-
swatches
{
display
:
flex
;
flex
-
flow
:
row
nowrap
;
justify
-
content
:
space
-
between
;
}
input
[
name
=
"
tab
-
group
-
color
"
]
{
width
:
0
;
height
:
0
;
opacity
:
0
;
margin
:
0
;
position
:
absolute
;
pointer
-
events
:
none
;
top
:
-
100px
;
}
.
tab
-
group
-
editor
-
swatch
{
font
-
size
:
0
;
width
:
16px
;
height
:
16px
;
padding
:
var
(
-
-
focus
-
outline
-
offset
)
;
border
:
var
(
-
-
focus
-
outline
-
width
)
solid
transparent
;
border
-
radius
:
var
(
-
-
border
-
radius
-
medium
)
;
background
-
clip
:
content
-
box
;
background
-
color
:
light
-
dark
(
var
(
-
-
tabgroup
-
swatch
-
color
)
var
(
-
-
tabgroup
-
swatch
-
color
-
invert
)
)
;
input
:
checked
+
&
{
border
-
color
:
var
(
-
-
focus
-
outline
-
color
)
;
}
input
:
disabled
+
&
{
opacity
:
0
.
5
;
}
input
:
focus
-
visible
+
&
{
outline
:
1px
solid
var
(
-
-
focus
-
outline
-
color
)
;
outline
-
offset
:
1px
;
}
}
.
tab
-
group
-
edit
-
actions
.
tab
-
group
-
delete
{
padding
-
block
:
0
;
>
toolbarbutton
{
justify
-
content
:
flex
-
start
;
}
}
toolbarbutton
{
margin
:
0
;
}
}
.
tab
-
group
-
editor
-
panel
.
tab
-
group
-
editor
-
panel
-
expanded
{
-
-
panel
-
width
:
25em
;
}
media
not
(
prefers
-
contrast
)
{
#
tabGroupEditor_deleteGroup
{
color
:
var
(
-
-
text
-
color
-
error
)
;
}
}
/* ... */

