Bug 1964923 - Make tab group label layout more consistent between collapsed and expanded vertical tabs so that things don't move around vertically when expanding on hover. r=sthompson,tabbrowser-reviewers
Differential Revision: https://phabricator.services.mozilla.com/D248233

UltraBlame original commit: 76e2e0a1877ea88bdacc49f49a4c9bb95889011a

--- a/browser/themes/shared/tabbrowser/tabs.css
+++ b/browser/themes/shared/tabbrowser/tabs.css
@@ -10556,12 +10556,80 @@ tabbrowser
 -
 tabs
 [
+tablist
+-
+has
+-
+focus
+]
+&
+.
+tablist
+-
+keyboard
+-
+focus
+{
+outline
+:
+var
+(
+-
+-
+focus
+-
+outline
+)
+;
+outline
+-
+offset
+:
+var
+(
+-
+-
+focus
+-
+outline
+-
+offset
+)
+;
+}
+#
+tabbrowser
+-
+tabs
+[
 orient
 =
 "
 vertical
 "
 ]
+&
+{
+height
+:
+24px
+;
+min
+-
+height
+:
+auto
+;
+line
+-
+height
+:
+24px
+;
+#
+tabbrowser
+-
+tabs
 :
 not
 (
@@ -10575,17 +10643,19 @@ width
 :
 24px
 ;
-min
--
-height
-:
-24px
-;
 max
 -
 width
 :
 24px
+;
+font
+-
+size
+-
+adjust
+:
+0
 ;
 /
 *
@@ -10689,12 +10759,6 @@ width
 2
 )
 ;
-font
--
-size
-:
-0
-;
 &
 :
 :
@@ -10736,13 +10800,6 @@ tabbrowser
 -
 tabs
 [
-orient
-=
-"
-vertical
-"
-]
-[
 expanded
 ]
 &
@@ -10752,31 +10809,6 @@ align
 self
 :
 start
-;
-box
--
-sizing
-:
-content
--
-box
-;
-line
--
-height
-:
-var
-(
--
--
-tab
--
-group
--
-label
--
-height
-)
 ;
 max
 -
@@ -10802,78 +10834,7 @@ space
 medium
 )
 ;
-padding
--
-block
-:
-calc
-(
-(
-24px
--
-var
-(
--
--
-tab
--
-group
--
-label
--
-height
-)
-)
-/
-2
-)
-;
 }
-#
-tabbrowser
--
-tabs
-[
-tablist
--
-has
--
-focus
-]
-&
-.
-tablist
--
-keyboard
--
-focus
-{
-outline
-:
-var
-(
--
--
-focus
--
-outline
-)
-;
-outline
--
-offset
-:
-var
-(
--
--
-focus
--
-outline
--
-offset
-)
-;
 }
 }
 .
